Add exercise solutions for all chapters
- Add solution .tex files for ch01-ch07
- Update ch04 solutions PDF
- Add solutions_style.sty for consistent formatting
- Update .gitignore to exclude screenshot/

--- a/.gitignore
+++ b/.gitignore
@@ -39,6 +39,13 @@ Thumbs.db
 *.bak
 *~
 
+# Generated plots from Python scripts
+moment_matching_errors.png
+/code/**/*.png
+
 # External references (separate repos)
 references/libcint/
 references/pyscf/
+
+# Screenshots (temporary)
+screenshot/
